# document_relevance

./: LICENSE  README.md  check.bat  configuration.yaml  generate_correlation_figures.py  generate_erp_figures.py  generate_latex_tables.py  generate_prediction_figures.py  pyproject.toml  run_experiments.py
doc_rel/: __init__.py
doc_rel/configuration/: configuration.py
doc_rel/data_operations/: loader.py
doc_rel/misc/: utils.py
doc_rel/model/: doc_rel.py  eegnet.py  embedding.py  lstm.py  trainer.py
doc_rel/vis/: eeg_data.py  model_performance.py
