[project]
name = "multimodallearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.15"
dependencies = [
    "adjusttext>=1.3.0",
    "autoflake>=2.3.1",
    "bandit>=1.8.3",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "gensim>=4.3.3",
    "isort>=6.0.1",
    "lightning>=2.1.4",
    "matplotlib>=3.10.1",
    "mne>=1.9.0",
    "mypy>=1.15.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pylint>=3.3.4",
    "pyupgrade>=3.19.1",
    "radon>=6.0.1",
    "safety>=3.5.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "types-pyyaml>=6.0.12.20250402",
    "types-requests>=2.32.0.20250328",
    "vulture>=2.14",
    "yake>=0.4.8",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
warn_return_any = true

# Per-module overrides
[[tool.mypy.overrides]]
module = "gensim.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true
